--- a/UI/css/index.css
+++ b/UI/css/index.css
@@ -8,7 +8,7 @@
   text-align: center;
   min-height: 30vh;
   padding-top: 4.1rem;
-  background-color: #f5f5f5;
+  background: linear-gradient(to right, #f5f5f5, #eaeaea);
   padding-bottom: 0.7rem;
   padding-left: 0rem;
   padding-right: 0rem;
@@ -79,6 +79,7 @@
   overflow: hidden;
   cursor: pointer;
   transition: background-color 0.3s ease;
+  margin-top: 0.5rem;
 }
 
 .upload-box:hover {
